# neuroglia-hd-atlas

./: .gitignore  BIG_PIPELINE_README.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  references.bib
.github/workflows/: ci.yml
docs/: dataset_card.md  methods.md  model_card.md  results_template.md  validation_plan.md
reports/: README.md  research_grade_analysis_report_final.md  research_grade_big_report.md
reports/archive_ba9_first_pass/: analysis_report.md
reports/archive_ba9_first_pass/tables/: baseline_metrics.csv  baseline_predictions.csv  class_balance.csv  crossval_predictions_recomputed.csv  crossval_train_test_metrics.csv  dataset_audit.csv  download_manifest.csv  latent_reconstruction_error.csv  latent_training_history.csv  nested_cv_metrics.csv  (+6 more)
scripts/: annotate_and_interpret_features.py  audit_feature_coverage_and_duplicates.py  build_ba9_processed_matrix.py  create_demo_processed_data.py  full_scale_frfr_run.py  inspect_gse281069_seurat.R  inventory_downloaded_files.py  make_analysis_ready_atlas_figures.py  make_clean_audit_figures.py  make_feature_interpretation_buckets.py  make_final_clean_figures.py  make_final_quality_gate_summary.py  nested_cv_audit.py  parse_gse180294_geo_metadata.py  patch_gse180294_labels_from_geo.py  prepare_loose_10x_dirs.py  pseudobulk_gse281069_seurat.R  research_grade_results_pack.py  run_big_research_grade_pipeline.sh  run_full_pipeline.sh  run_research_grade_big_pipeline.py  strict_supervised_sensitivity.py  write_final_readme_results.py
src/neuroglia_hd/: __init__.py  cli.py  config.py  logging_utils.py
tests/: test_big_pipeline_smoke.py  test_pseudobulk.py  test_registry.py  test_signatures.py
(+9 files in other folders)
