[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neuroglia-hd-atlas"
version = "0.1.0"
description = "Cell-type-aware machine learning for Huntingtonian neuroglial state modelling from public transcriptomic atlases."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Noor Ul Ain Zahra", email = "noorzahra01@gmail.com"}]
keywords = ["biomedical-ai", "huntington-disease", "single-cell", "snrna-seq", "glia", "machine-learning", "reproducibility"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "scipy>=1.10",
  "pyyaml>=6.0",
  "joblib>=1.3",
  "matplotlib>=3.7",
  "tqdm>=4.66",
  "tabulate>=0.9",
  "pyarrow>=14",
]

[project.optional-dependencies]
core = [
  "pytest>=7.4",
  "ruff>=0.5",
]
full = [
  "anndata>=0.10",
  "scanpy>=1.10",
  "h5py>=3.10",
  "torch>=2.2",
  "optuna>=3.5",
  "statsmodels>=0.14",
  "seaborn>=0.13", # optional only; repository plotting code uses matplotlib by default
  "pytest>=7.4",
  "ruff>=0.5",
]

[project.scripts]
neurogliahd = "neuroglia_hd.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
